0.83.11
  - With the config option "startcmd=true" or command-
    line option -winrun, Windows applications can now
    be launched from within a DOS program or from the
    4DOS shell in addition to built-in shell. (Wengier)
  - Windows SDL2 builds now use same clipboard pasting
    method as Windows SDL1 builds by default instead of
    the BIOS function. The method is now also available
    for Linux and macOS builds. A menu option "Use BIOS
    function for keyboard pasting" is added to "Shared
    clipboard functions" menu group (under "Main") to
    use BIOS function for the clipboard pasting instead
    of the keystroke method. This setting can also be
    changed with the "clip_paste_bios" config option in
    [sdl] section of the configuration. (Wengier)
  - Added support for the clipboard device (CLIP$) and
    DOS clipboard API on non-Windows systems (they were
    previously only supported on the Windows platform).
    In Linux SDL1 build only read access is supported
    whereas both read and write access are supported in
    all other builds. Also, selecting and copying text
    to the host clipboard using a mouse button or arrow
    key is now supported in macOS SDL1 build. (Wengier)
  - Added "Paste Clipboard" button to the AUTOEXEC.BAT,
    CONFIG.SYS and 4DOS.INI sections in Configuration
    Tool for pasting clipboard contents. (Wengier)
  - Added a simple BIOS Setup Utlity, which will show
    a summary of the current system configuration and
    allow users to change the date and time. Press Del
    key at the BIOS boot screen to enter. (Wengier)
  - Added config option "showbasic" in [sdl] section
    which when set to false will hide DOSBox-X version
    number and running speed in the titlebar. (Wengier)
  - Added experimental option to load a VGA BIOS ROM
    image and execute it, instead of our own INT 10h
    emulation. If enabled, it will load the specific
    ROM file into C000:0000. If not specified, it